--- a/public/css/index.css
+++ b/public/css/index.css
@@ -12,23 +12,10 @@
   padding-bottom: 10px;
 }
 
-/* TAG, TABLE */
-.section__table {
-  border-top: 1px solid black;
-  padding-top: 10px;
-}
-
-.section__table ul {
+header .menu-group .main-menu {
   list-style: none;
-  margin: 0px;
-  padding: 0px;
 }
 
-.section__table li {
-  margin-bottom: 10px;
-  border-bottom: 1px solid grey;
-}
-/* FORM */
-.section__form {
-  padding-bottom: 30px;
+header .menu-group .main-menu .menu{
+  list-style: square;
 }
