--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,21 +1,50 @@
 /* COMMON */
+html {
+  font-size: 16px;
+}
+
 .section {
   border-bottom: 1px solid grey;
 }
 
 .summary {
   font-size: 40px;
-  text-decoration: underline;
+  /* text-decoration: underline; */
   background: #e9ecef;
   border-bottom: 1px solid grey;
   padding-left: 10px;
   padding-bottom: 10px;
+}
+header .title {
+  height: 5rem;
+  font-size: 2rem;
+  font-weight: 700;
+  text-align: center;
+  border-bottom: 1px solid grey;
+  padding-bottom: 2rem;
+}
+header .title .subject {
+  font-size: 2.2rem;
+  padding-bottom: 0.3rem;
+}
+header .title .description {
+  text-decoration: overline;
 }
 
 header .menu-group .main-menu {
   list-style: none;
 }
 
+header .menu-group .main-menu .top-level-entry-container {
+  
+}
+
 header .menu-group .main-menu .menu{
-  list-style: square;
+  
+  list-style: none;
+}
+
+header .menu-group .main-menu .menu a{
+  text-decoration: none;
+  color: #00f;
 }
