--- a/src/css_part/main.css
+++ b/src/css_part/main.css
@@ -61,7 +61,7 @@ td {
   padding-bottom: 10px;
 }
 
-/* transition & animation */
+/* transition */
 .move1:hover {
   transform: translate(2rem, 0);
 }
@@ -221,4 +221,9 @@ td {
   line-height: 4rem;
   transition: all 0.6s ease-in-out;
   opacity: 0;
+}
+
+/* animation */
+.section__animation {
+  margin-top: 25rem;
 }
