--- a/src/css_part/main.css
+++ b/src/css_part/main.css
@@ -227,3 +227,55 @@ td {
 .section__animation {
   margin-top: 25rem;
 }
+
+.section__animation ul {
+  list-style: none;
+}
+
+.section__animation li p {
+  display: inline-block;
+  margin-right: 5rem;
+}
+
+.section__animation .ani1 {
+  width: 10rem;
+  height: 10rem;
+  background: blue;
+  border: 0.1rem solid transparent;
+  animation-name: shape;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: ease;
+}
+
+.section__animation .ani2 {
+  width: 10rem;
+  height: 10rem;
+  background: yellow;
+  border: 0.1rem solid #000;
+  animation-name: rotate;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: ease;
+}
+
+@keyframes shape {
+  from {
+    border: 0.1rem solid transparent;
+  }
+  to {
+    border: 0.1rem solid #000;
+    border-radius: 50%;
+  }
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
